Corrected pagination nav overflow on search results page.

--- a/public/css/search.css
+++ b/public/css/search.css
@@ -33,6 +33,15 @@ h2 {
 
 /*  */
 
+@media (max-width: 390px) {
+	.pag-not-required {
+		display: none;
+	}
+	.page-link {
+		padding: 8px;
+	}
+}
+
 @media (max-width: 569px) {
 	.result-image {
 		width: 100%;
